Form display finished

--- a/src/main/resources/templates/temp_page_first.html
+++ b/src/main/resources/templates/temp_page_first.html
@@ -5,7 +5,11 @@
 </head>
 <body>
   <div class="formbold-main-wrapper" th:style="'background-color:' + ${group_type == 0 ? 'blue' : 'red'}">
+    
     <div class="formbold-form-wrapper">
+
+      <div class="formbold-form-header">
+        <h1 class="formbold-form-header-title" th:text="${scale + ' test'}"></h1>
   
       <!-- Form icon -->
       <svg class="formbold-form-img" width="490" height="207" viewBox="0 0 490 207" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -129,15 +133,16 @@
             >
               <div 
                 th:each="option : ${question.options}"
-                class="formbold-radio-group"
-              >
-                <label th:text="${option.text}" class="formbold-radio-label">
-                  <input 
-                  type="radio"
-                  th:name="${'answer' + question.id}"
-                  th:value="${option}"
-                  class="formbold-input-radio"
+                style="display: flex; align-items: center;"
+                >
+                <label class="formbold-radio-label">
+                  <input
+                    type="radio"
+                    th:name="${'answer' + question.id}"
+                    th:value="${option}"
+                    style="margin-right: 10px;"
                   />
+                  <span th:text="${option.text}"></span>
                 </label>
               </div>
             </div>
@@ -145,7 +150,7 @@
           </div>
         </div>
 
-        <button class="formbold-btn">Submit</button>
+        <button class="formbold-btn" type="submit">Submit</button>
       </form>
     </div>
   </div>
@@ -174,6 +179,7 @@
     width: 100%;
     background: white;
     padding: 40px;
+    border-radius: 10px;
   }
 
   .formbold-form-img {
@@ -205,16 +211,11 @@
     gap: 15px;
   }
   .formbold-radio-label {
-    font-size: 14px;
+    font-size: 20px;
     line-height: 24px;
     color: #07074d;
     position: relative;
-    padding-left: 25px;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    padding-left: 10px;
   }
   .formbold-input-radio {
     position: absolute;
@@ -279,7 +280,7 @@
   }
   .formbold-form-label {
     color: #07074d;
-    font-size: 14px;
+    font-size: 20px;
     line-height: 24px;
     display: block;
     margin-bottom: 10px;
@@ -301,4 +302,5 @@
   .formbold-btn:hover {
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
   }
+  
 </style>
