--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <title>Login</title>
 </head>
 
@@ -59,6 +60,8 @@
       width: 100%;
       background: white;
     }
+
+    
   
     .formbold-form-title {
       margin-bottom: 40px;
@@ -110,6 +113,30 @@
     }
     .formbold-btn:hover {
       box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+    }
+
+    /* Style for smaller devices */
+    @media (max-width: 768px) {
+      .formbold-form-title h3 {
+        font-size: 40px;
+        line-height: 50px;
+        width: 100%;
+        margin-bottom: 20px;
+      }
+      .formbold-form-title p {
+        font-size: 24px;
+        line-height: 36px;
+        width: 90%;
+        margin-bottom: 40px;
+      }
+      .formbold-form-input {
+        font-size: 24px;
+        margin-bottom: 20px;
+      }
+      .formbold-btn {
+        font-size: 24px;
+        
+      }
     }
   
   </style>
