--- a/src/main/resources/templates/temp_page_first.html
+++ b/src/main/resources/templates/temp_page_first.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
-  <title>Page 1</title>
+  <title th:text="'Page ' + ${page}"></title>
 </head>
 <body>
 
@@ -20,7 +20,7 @@
     <div class="formbold-form-wrapper">
 
       <div class="formbold-form-header">
-        <h1 class="formbold-form-header-title" th:text="${scale + ' test'}"></h1>
+        <h1 class="formbold-form-header-title" th:text="${#strings.capitalizeWords(scale)}"></h1>
   
       <!-- Form icon -->
       <!-- 
