fix question property

--- a/src/main/resources/templates/temp_page_first.html
+++ b/src/main/resources/templates/temp_page_first.html
@@ -202,7 +202,7 @@
 
         <input type="hidden" name="group_type" th:value="${group_type}" />
         <input type="hidden" name="page" th:value="${page}" />
-        <input type="hidden" name="scale" th:value="${scale}" />
+        <input type="hidden" name="scaleId" th:value="${scaleId}" />
         <input type="hidden" name="answerRecordId" th:value="${answerRecordId}" />
         <input type="hidden" name="totalPage" th:value="${totalPage}" />
         <input type="hidden" name="accountId" th:value="${accountId}" />
