--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -22,7 +22,7 @@
           <h3>Login Now to Start the test</h3>
           <p>Please enter the test account or ask  for assistance</p>
       </div>
-      <form action="/login" method="POST">
+      <form id="myForm" action="/login" method="POST">
           <input
             type="text"
             name="accountId"
@@ -32,7 +32,10 @@
           />
   
           <button class="formbold-btn">
-              Start Now
+            <span class="button-text">Start Now</span>
+            <div class="loadingSpinner" style="display: none;">
+              <div class="spinner"></div>
+            </div>
           </button>
       </form>
     </div>
@@ -99,6 +102,9 @@
     }
   
     .formbold-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
       width: 100%;
       font-size: 16px;
@@ -106,10 +112,10 @@
       padding: 14px 25px;
       border: none;
       font-weight: 500;
-      background-color: #6A64F1;
+      background-color: #6a64f1;
       color: white;
       cursor: pointer;
-      margin-top: 15px;
+      margin-top: 25px;
     }
     .formbold-btn:hover {
       box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
@@ -138,8 +144,39 @@
         
       }
     }
+
+    .spinner {
+      width: 19px;
+      height: 19px;
+      position: relative;
+    }
+    
+    .spinner::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      border: 2px solid #ccc;
+      border-top-color: #333;
+      animation: spin 1s linear infinite;
+    }
+    
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   
   </style>
+  <script>
+    document.getElementById('myForm').addEventListener('submit', function(event) {
+      var button = this.querySelector('.formbold-btn');
+      var spinner = button.querySelector('.loadingSpinner');
+      var buttonText = button.querySelector('.button-text');
+      spinner.style.display = 'flex';
+      buttonText.style.display = 'none';
+    });
+  </script>
 
 </body>
 </html>
