update scale selection

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -50,6 +50,8 @@
               <div class="spinner"></div>
             </div>
           </button>
+
+          <input type="hidden" id="scaleId" name="scaleId" value="${scaleId}"/>
       </form>
     </div>
   </div>
