fix scale selection

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -51,7 +51,7 @@
             </div>
           </button>
 
-          <input type="hidden" id="scaleId" name="scaleId" value="${scaleId}"/>
+          <input type="hidden" id="scaleId" name="scaleId" th:value="${scaleId}"/>
       </form>
     </div>
   </div>
