--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -137,6 +137,24 @@
       box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
     }
 
+
+    .spinner {
+      width: 18.667px;
+      height: 18.667px;
+      position: relative;
+    }
+    
+    .spinner::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      border: 2px solid #ccc;
+      border-top-color: #333;
+      animation: spin 1s linear infinite;
+    }
+
     /* Style for smaller devices */
     @media (max-width: 768px) {
       .formbold-form-title h3 {
@@ -157,26 +175,15 @@
       }
       .formbold-btn {
         font-size: 24px;
-        
       }
+      .spinner {
+        width: 28px;
+        height: 28px;
+        position: relative;
+    }
     }
 
-    .spinner {
-      width: 19px;
-      height: 19px;
-      position: relative;
-    }
     
-    .spinner::before {
-      content: '';
-      display: block;
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      border: 2px solid #ccc;
-      border-top-color: #333;
-      animation: spin 1s linear infinite;
-    }
     
     @keyframes spin {
       0% { transform: rotate(0deg); }
@@ -207,6 +214,18 @@
       var buttonText = button.querySelector('.button-text');
       spinner.style.display = 'flex';
       buttonText.style.display = 'none';
+    });
+
+    // 监听 pageshow 事件来处理浏览器的前进和后退操作
+    window.addEventListener('pageshow', function(event) {
+      var button = document.querySelector('.formbold-btn');
+      if (button) {
+        var spinner = button.querySelector('.loadingSpinner');
+        var buttonText = button.querySelector('.button-text');
+        // 重置按钮状态，显示文本，隐藏旋转圆圈
+        spinner.style.display = 'none';
+        buttonText.style.display = 'inline'; // 或者是 'block', 取决于你的布局
+      }
     });
   </script>
 
