--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
-  <title>Login</title>
+  <title>Login-Webform</title>
+  <link rel="icon" href="/image.ico" type="image/x-icon">
 </head>
 
 <body>
