--- a/src/main/resources/templates/Form.html
+++ b/src/main/resources/templates/Form.html
@@ -224,6 +224,14 @@
         </button>
       </form>
     </div>
+    <div id="logo" style="width: 10%; margin-top: 30px; margin-bottom: 10px;">
+      <img src="/Webform.png" alt="logo" style="width: 100%;"/>
+    </div>
+    <!-- 添加的链接 -->
+    <p>
+      Create your own questionnaire with <a href="https://webformedit.azurewebsites.net/" target="_blank" style="color: inherit; text-decoration: underline; font-weight: bold;">Webform</a>
+    </p>
+
   </div>
 </body>
 
@@ -240,6 +248,7 @@
   }
   .formbold-main-wrapper {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 48px;
