update experimental setting

--- a/src/main/resources/templates/Form.html
+++ b/src/main/resources/templates/Form.html
@@ -5,7 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <title th:text="'Page ' + ${page}"></title>
 </head>
-<body th:style="'background-color:' + ${group_type == 0 ? 'blue' : 'red'}">
+<body th:style="'background-color:' + (${bgColor} != null ? ${bgColor} : '#E6E6FA')">
+
+  <div id="myModal" class="modal" th:style="${music} != null ? 'display: block;' : 'display: none;'">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <p>音乐将会播放，点击确认开始。</p>
+      <button id="confirmBtn">确认</button>
+    </div>
+  </div>
+
+  <audio controls autoplay loop th:src="${music}" style="display: none;">
+    Your browser does not support the audio element.
+  </audio>
+
 
   <!-- error -->
   <input type="hidden" id="error" th:value="${error}"/>
@@ -465,6 +478,27 @@
     height: auto;
   }
 
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+
 
   /* Style for screen samller */
   @media (max-width: 768px) {
@@ -511,6 +545,10 @@
       // 恢复按钮的可点击状态
       button.disabled = false;
     }
+  });
+  document.getElementById('confirmBtn').addEventListener('click', function() {
+    document.getElementById('myModal').style.display = 'none';
+    document.getElementById('myAudio').play();
   });
 </script>
 
